# quckapp

./: .dockerignore  .env.dev.example  .env.example  .env.firebase  .env.local.example  .env.production.example  .env.qa.example  .env.staging.example  .env.uat.example  .gitignore  .gitmodules  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  SERVICES.md  auth-api.json  azure-pipelines.yml  docker-compose.configloader.yml  docker-compose.infra.yml  docker-compose.services.yml  docker-compose.yml  firebase.json  firestore.rules  swagger_temp.json
services/file-service/: Cargo.toml  Dockerfile  go.mod  go.sum
services/file-service/cmd/server/: main.go
services/file-service/src/: api.rs  main.rs  models.rs
services/message-service/: .env.example  Cargo.toml  Dockerfile  mix.exs
services/message-service/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
services/message-service/lib/message_service/: application.ex  endpoint.ex  error_json.ex  guardian.ex  router.ex  telemetry.ex  typing_tracker.ex
services/message-service/lib/message_service/channels/: conversation_channel.ex  user_socket.ex
services/message-service/lib/message_service/controllers/: health_controller.ex  message_controller.ex
services/message-service/lib/message_service/plugs/: auth_plug.ex
services/message-service/src/: main.rs
services/message-service/src/api/: handlers.rs  routes.rs
services/message-service/src/config/: mod.rs
services/message-service/src/db/: mod.rs
services/message-service/src/models/: mod.rs
services/message-service/src/services/: mod.rs
(+2034 files in other folders)
