[package]
name = "file-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
aws-sdk-s3 = "1"
aws-config = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
mime = "0.3"
sha2 = "0.10"
hex = "0.4"
